# sql-mcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml  timelyre_api-1.4.0-py3-none-any.whl  实现步骤.md  数据智探产品设计文档.md
agent/: chart_generator.py  config.py  executor.py  nl2sql.py  response.py  schema_retriever.py  sql_validator.py
agent/models/: chart_model.py
agent/utils/: log_util.py
api/: app.py  auth.py  models.py  routes.py  sync_task.py
common/: config.py  env_utils.py  log_util.py
data/: table_for_rag.json  table_for_rag.jsonc  table_schema.yaml
docker/: docker-compose.yml  init.sql
skill/: SKILL.md
